@@ -1,5 +1,6 @@
 
 [('screenshots.html', 'Screenshots'),
+ ('features.html', 'Features'),
  ('pubs.html', 'Publications'),
  ('news/', 'News'),
  ('background/', 'Background'),
