@@ -1,13 +1,12 @@
-<h2>
-Under construction</h2>
-
+<h2>Under construction</h2>
 This site is under construction. The old websites can still be
 accessed: go <a href="http://lilypond.org/stable">for the stable
 release</a>
 and <a href="http://lilypond.org/development">for the development release</a>.
 <p>
 
-	
+<h1>LilyPond -- printing music</h1>
+
 <blockquote><em>
 LilyPond is the greatest thing since sliced bread. My music
 typesetting looks much nicer now!</em>
