@@ -1,3 +1,11 @@
+2003-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/about/menu-entries.py: Add features entry.
+
+	* site/about/features.html: New file.
+
+	* site/index.html: Add heading.
+
 2003-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* GNUmakefile (buttons): Use script-fu lily-buttons.
